[tool.poetry]
name = "milanesas"
version = "0.1.9"
description = "A group of tools to do exploratory analysis."
authors = ["Torrez, Milton <torrez.mn@gmail.com>"]
readme = ["docs/eda_helper.md"]
packages = [
    { include = "milanesas" },  # For code in a custom directory named "mypackage"
]
keywords = ["packaging", "data_science", "pandas"]


[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
