[tool.poetry]
name = "milanesas"
version = "0.1.34"
description = "A group of tools to do exploratory analysis."
authors = ["Torrez, Milton <torrez.mn@gmail.com>"]
homepage = "https://torrezmn.github.io/EDA_Helper/eda_helper/"
packages = [
{ include = "milanesas" },  # For code in a custom directory named "mypackage"
]
keywords = ["packaging", "data_science", "pandas"]
readme = ["docs/README.md"]
[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"  # Specifying the minimum pandas version
matplotlib = "^3.6.0"  # Specifying the minimum matplotlib version
numpy = "1.24.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
