[tool.poetry]
name = "Milanesas"
version = "0.1.1"
description = "A group of tools to do exploratory analysis."
authors = ["Torrez, Milton <torrez.mn@gmail.com>"]
homepage = "https://torrezmn.github.io/EDA_Helper/eda_helper/"
packages = [
{ include = "milanesas" },  # For code in a custom directory named "mypackage"
]
keywords = ["packaging", "data_science", "pandas"]
readme = ["docs/README.md"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
beautifulsoup4 = "^4.12.3"
numpy = "1.24.4"
pandas = "2.0.3"
matplotlib = "3.7.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
